when there are less number of observations in one level, glm.fit does not converge. with less abundance, we use poisson glm

--- a/vignettes/bootLong.Rmd
+++ b/vignettes/bootLong.Rmd
@@ -56,7 +56,7 @@ library(parallel)
 library(magrittr)
 library(joineR)
 library(DESeq2)
-library(bootLong)
+#library(bootLong)
 ```
 
 Set the computational resources
