--- a/vignettes/bootLong.Rmd
+++ b/vignettes/bootLong.Rmd
@@ -112,7 +112,9 @@ set.theme <- theme_update(panel.border = element_blank(),
 
 
 sample_data(ps)$Preterm <- as.factor(sample_data(ps)$Preterm)
-p <- plotSamplingSchedule(ps, time_var = "Time", subjectID_var = "SubjectID", main_factor = "Preterm", theme_manual = set.theme)
+#sample_data(ps)$GWColl <- as.integer(sample_data(ps)$GWColl)
+#sample_data(ps)$SubjectID <- as.character(sample_data(ps)$SubjectID)
+p <- plotSamplingSchedule(ps, time_var = "GWColl", subjectID_var = "SubjectID", main_factor = "Preterm", theme_manual = set.theme)
 p <- p + scale_color_discrete(name  ="Group",breaks=c("FALSE", "TRUE"),labels=c("Term", "Preterm"))
 #ggsave("./sampling_schedule.pdf",plot=p,width = 8,height = 5.5)
 ```
