--- a/vignettes/bootLong.Rmd
+++ b/vignettes/bootLong.Rmd
@@ -64,8 +64,8 @@ library(parallel)
 library(magrittr)
 library(joineR)
 library(DESeq2)
-#library(bootLong)
-devtools::load_all(".")
+library(bootLong)
+#devtools::load_all(".")
 ```
 
 Set the computational resources: we need to specify the number of cores for subsampling method. 
