--- a/vignettes/bootLong.Rmd
+++ b/vignettes/bootLong.Rmd
@@ -332,28 +332,28 @@ First, we identify the opitmal block size for the subsample. We use the initial 
 
 ## Subsampling
 
-```{r message=FALSE,warning=FALSE}
+```{r message=FALSE,warning=FALSE, eval=FALSE}
 R <- 5
 RR <- 5
 main_factor <- "Preterm"
 time_var <- "Time"
 subjectID_var = "SubjectID"
 sampleID_var = "SampleID"
-lI <- 5
+lI <- 4
 omega <- .6
 system.time(
     mse_results <- bootLongSubsampling(ps, 
-                                       main_factor = main_factor,
-                                       time_var = time_var, 
-                                       subjectID_var = subjectID_var,
-                                       sampleID_var = sampleID_var,
-                                       lI = lI,  
-                                       R = R, 
-                                       RR = RR,
-                                       omega = omega,
-                                       lC1 = 1, 
-                                       lC2 = NULL,
-                                       ncores = ncores)
+        main_factor = main_factor,
+        time_var = time_var, 
+        subjectID_var = subjectID_var,
+        sampleID_var = sampleID_var,
+        lI = lI,
+        R = R,
+        RR = RR,
+        omega = omega,
+        lC1 = 1, 
+        lC2 = NULL,
+        ncores = ncores)
     )
 
 #saveRDS(mse_results,"./MSE.rds")
@@ -366,7 +366,7 @@ Second, we identify the optimal block size for the original data using the formu
 $$l_{o} = \left(\frac{1}{\omega}\right)^{1/5}l_{\omega}$$.
 
 
-```{r message=FALSE,warning=FALSE}
+```{r message=FALSE,warning=FALSE, eval=FALSE}
 omega <- .6
 #mse_results <- readRDS("./MSE.rds")
 blks <- length(mse_results)
@@ -405,7 +405,7 @@ l.opt
 Finally, we run the block bootstrap method with the optimal block size for differential abundance analysis.
 
 
-```{r message=FALSE, warning=FALSE}
+```{r message=FALSE, warning=FALSE, eval=FALSE}
 R <- 5
 RR <- 5
 main_factor <- "Preterm"
