update bootLongMethod doc

--- a/vignettes/bootLong.Rmd
+++ b/vignettes/bootLong.Rmd
@@ -64,8 +64,8 @@ library(parallel)
 library(magrittr)
 library(joineR)
 library(DESeq2)
-library(bootLong)
-#devtools::load_all(".")
+#library(bootLong)
+devtools::load_all(".")
 ```
 
 Set the computational resources: we need to specify the number of cores for subsampling method. 
@@ -334,29 +334,20 @@ First, we identify the opitmal block size for the subsample. We use the initial 
 
 ```{r message=FALSE,warning=FALSE, eval=FALSE}
 R <- 5
-RR <- 5
+RR <- 4
 main_factor <- "Preterm"
 time_var <- "Time"
 subjectID_var = "SubjectID"
 sampleID_var = "SampleID"
 lI <- 4
 omega <- .6
-system.time(
-    mse_results <- bootLongSubsampling(ps, 
-        main_factor = main_factor,
-        time_var = time_var, 
-        subjectID_var = subjectID_var,
-        sampleID_var = sampleID_var,
-        lI = lI,
-        R = R,
-        RR = RR,
-        omega = omega,
-        lC1 = 1, 
-        lC2 = NULL,
-        ncores = ncores)
-    )
 
-#saveRDS(mse_results,"./MSE.rds")
+system.time(
+    mse.results <- bootLongSubsampling(ps = ps, main_factor = main_factor, time_var = time_var, subjectID_var = subjectID_var, sampleID_var = sampleID_var, lI = lI, R = R, RR = RR, omega = omega, lC1 = 1, lC2 = NULL, ncores = ncroes)
+)
+
+
+#saveRDS(mse.results,"./MSE.rds")
 ```
 
 ###   Inspect MSE plot
@@ -407,7 +398,7 @@ Finally, we run the block bootstrap method with the optimal block size for diffe
 
 ```{r message=FALSE, warning=FALSE, eval=FALSE}
 R <- 5
-RR <- 5
+RR <- 4
 main_factor <- "Preterm"
 time_var <- "Time"
 subjectID_var = "SubjectID"
