--- a/vignettes/bootLong.Rmd
+++ b/vignettes/bootLong.Rmd
@@ -343,7 +343,7 @@ lI <- 4
 omega <- .6
 
 system.time(
-    mse.results <- bootLongSubsampling(ps = ps, main_factor = main_factor, time_var = time_var, subjectID_var = subjectID_var, sampleID_var = sampleID_var, lI = lI, R = R, RR = RR, omega = omega, lC1 = 1, lC2 = NULL, ncores = ncroes)
+    mse.results <- bootLongSubsampling(ps = ps, main_factor = main_factor, time_var = time_var, subjectID_var = subjectID_var, sampleID_var = sampleID_var, lI = lI, R = R, RR = RR, omega = omega, lC1 = 1, lC2 = NULL, ncores = ncores)
 )
 
 
