adding poisson est if counts are small

--- a/vignettes/bootLong.Rmd
+++ b/vignettes/bootLong.Rmd
@@ -65,6 +65,7 @@ library(magrittr)
 library(joineR)
 library(DESeq2)
 #library(bootLong)
+devtools::load_all(".")
 ```
 
 Set the computational resources: we need to specify the number of cores for subsampling method. 
