--- a/vignettes/bootLong.Rmd
+++ b/vignettes/bootLong.Rmd
@@ -328,7 +328,7 @@ First, we identify the opitmal block size for the subsample. We use the initial 
 
 ## Subsampling
 
-```{r message=FALSE,warning=FALSE, eval=FALSE}
+```{r message=FALSE,warning=FALSE}
 R <- 5
 RR <- 4
 main_factor <- "Group"
@@ -353,7 +353,7 @@ Second, we identify the optimal block size for the original data using the formu
 $$l_{o} = \left(\frac{1}{\omega}\right)^{1/5}l_{\omega}$$.
 
 
-```{r message=FALSE,warning=FALSE, eval=FALSE}
+```{r message=FALSE,warning=FALSE}
 omega <- .6
 #mse_results <- readRDS("./MSE.rds")
 blks <- length(mse.results)
@@ -392,7 +392,7 @@ l.opt
 Finally, we run the block bootstrap method with the optimal block size for differential abundance analysis.
 
 
-```{r message=FALSE, warning=FALSE, eval=FALSE}
+```{r message=FALSE, warning=FALSE}
 R <- 5
 RR <- 4
 main_factor <- "Group"
